yoga-backend/out.txt
node : 
C:\Users\samradh malli\
Downloads\yoga-website-
master\yoga-backend\ser
ver.js:14
At line:1 char:1
+ node server.js 2>&1 
| Out-File -Encoding 
utf8 out.txt
+ ~~~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : 
NotSpecified: (C:\    
Users\samrad...nd\serv 
   er.js:14:String) 
[], R    emoteException
    + 
FullyQualifiedErrorI   
 d : NativeCommandError
 
const multer = 
require('multer');
      ^

SyntaxError: 
Identifier 'multer' 
has already been 
declared
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1620:18)
    at Module._compile 
(node:internal/modules/
cjs/loader:1662:20)
    at Object..js (node
:internal/modules/cjs/l
oader:1820:10)
    at Module.load (nod
e:internal/modules/cjs/
loader:1423:32)
    at Function._load (
node:internal/modules/c
js/loader:1246:12)
    at TracingChannel.t
raceSync (node:diagnost
ics_channel:322:14)
    at wrapModuleLoad (
node:internal/modules/c
js/loader:235:24)
    at Function.execute
UserEntryPoint [as 
runMain] (node:internal
/modules/run_main:171:5
)
    at node:internal/ma
in/run_main_module:36:4
9

Node.js v22.18.0
